# ChangeLog for x11-wm/matchbox
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/matchbox/ChangeLog,v 1.21 2009/10/04 14:25:32 ssuominen Exp $

  04 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> matchbox-0.7.1.ebuild:
  Replace -Wl,--no-as-needed with function from flag-o-matic eclass.

  14 Mar 2009; <solar@gentoo.org> matchbox-0.7.1.ebuild,
  matchbox-1.0.ebuild:
  keyword ~amd64

  13 Jul 2008; Joseph Jezak <josejx@gentoo.org> matchbox-1.0.ebuild:
  Marked ~ppc for bug #211803.

  27 Feb 2008; Yuri Vasilevski <yvasilev@gentoo.org> matchbox-0.7.1.ebuild,
  matchbox-1.0.ebuild:
  Updated HOMEPAGE and SRC_URI to it's new location
  http://matchbox-project.org/ (Bug #211244).

  06 Feb 2008; <yvasilev@gentoo.org> matchbox-0.7.1.ebuild:
  Added -Wl,--no-as-needed to LDFLAGS to fix Bug #203150:
  x11-wm/matchbox-0.7.1: undefined reference to XShm* w/ --as-needed

  26 Sep 2007; Jeroen Roovers <jer@gentoo.org> matchbox-1.0.ebuild:
  Marked ~hppa too.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  matchbox-0.7.1.ebuild:
  Drop virtual/x11 references.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> matchbox-0.7.1.ebuild:
  (QA) RESTRICT clean up.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  07 Aug 2006; <yvasilev@gentoo.org> matchbox-1.0.ebuild:
  Added ~arm keyword.

  19 Jun 2006; <yvasilev@gentoo.org> matchbox-1.0.ebuild:
  Removed xine USE flag until x11-plugins/matchbox-desktop-xine is ready, bug
  #137057.

*matchbox-1.0 (04 Jun 2006)

  04 Jun 2006; <yvasilev@gentoo.org> metadata.xml, +matchbox-1.0.ebuild:
  Version dump to become a meta package for the Matchbox desktop.

  11 Feb 2006; Krzysiek Pawlik <nelchael@gentoo.org> metadata.xml:
  Moved to desktop-wm.

  31 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> matchbox-0.7.1.ebuild:
  Fixed DEPEND for modular X.

  31 Oct 2005; Krzysiek Pawlik <nelchael@gentoo.org> matchbox-0.7.1.ebuild: