@@ -1,5 +1,5 @@
 DIST matchbox-0.7.1.tar.gz 740758 RMD160 6ab9217d1bbee30540709762d640a220b93afe45 SHA1 5f26a6a83c7f24508f3ff031ec4e7c13d2cad3bd SHA256 ac5a1b26a1d3a1acf23654b039125869306d69bd0226a8255dde2e86574d3cfe
-EBUILD matchbox-0.7.1.ebuild 1412 RMD160 8324776fbd7a61017a4ad9e2556f875525062acd SHA1 f1221ba1d7c62d665c3f1123ce6b12f19ab219bb SHA256 adee37ab46900557f50ecd6f7a37e0be5d0c1590c95622880a440a2c8f9fc82b
+EBUILD matchbox-0.7.1.ebuild 1415 RMD160 aec580181b7c38eedbe5559f00b135e757b49396 SHA1 1e713d7a7f84a00f8eb7dd549d1ef014ddaf4733 SHA256 ff8fe7f94c87f3136bbe7d316930b433ce6978ff7be8f5546f7fba22bd3f0754
 EBUILD matchbox-1.0.ebuild 995 RMD160 ae43ea93fa71498a286298e0b944d5402eae906c SHA1 81e4c321ba918e73917efbe4cd2a1d29b2579d0c SHA256 42b589d545423926fb9642d6ea91a5f9059687a7bf8df2475425ca0981c80da3
-MISC ChangeLog 2612 RMD160 585eb0186b096d4f1f8b524bf449065d488a5f0e SHA1 b3d8d9af1c18fa797b8228aafd5e226e3432fc2b SHA256 cf8ac8bdf5b125f864b7bd1170b8d3e8f80cf5f57fbc457671aff572e0d78fa5
+MISC ChangeLog 2722 RMD160 fb0e48401ba05a27f5b5980e8699b8346df7b031 SHA1 cfdc80439f1b1d817d6fc36bf93e6de50b455252 SHA256 5ced7d7bd52bc69ee62cdc46207358dc339d90beda5335c9c2749178be1e7a0c
 MISC metadata.xml 247 RMD160 49e7f36b66be574d7f3341589ebff702e1c8c8a9 SHA1 af1f5473be400926e7bf9a98a354866150c8b7a7 SHA256 09c798d19a28d8e2ee2b8494e011929f5fc1617190315d82bd03c32e911def55
