@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/matchbox/matchbox-0.7.1.ebuild,v 1.15 2009/10/04 14:25:32 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/matchbox/matchbox-0.7.1.ebuild,v 1.16 2010/11/08 21:45:49 ssuominen Exp $
 
 inherit flag-o-matic
 
@@ -23,8 +23,8 @@ RDEPEND="x11-libs/libXtst
 	dev-libs/expat
 	x11-libs/startup-notification
 	x11-libs/libxsettings-client
-	png? ( media-libs/libpng )
-	jpeg? ( media-libs/jpeg )"
+	png? ( >=media-libs/libpng-1.4 )
+	jpeg? ( virtual/jpeg )"
 
 DEPEND="${RDEPEND}
 	x11-proto/xproto
