@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/matchbox
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/matchbox/ChangeLog,v 1.21 2009/10/04 14:25:32 ssuominen Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/matchbox/ChangeLog,v 1.22 2010/11/08 21:45:49 ssuominen Exp $
+
+  08 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> matchbox-0.7.1.ebuild:
+  Use virtual/jpeg wrt #327487.
 
   04 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> matchbox-0.7.1.ebuild:
   Replace -Wl,--no-as-needed with function from flag-o-matic eclass.
